fix: adjust resources align

--- a/src/Styles/pages/my-resources.css
+++ b/src/Styles/pages/my-resources.css
@@ -24,6 +24,7 @@
   display: flex;
   flex-direction: column;
   justify-items: center;
+  align-items: center;
   max-width: 80%;
 }
 
